--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-# Python
+# Env
+.env
+
 __pycache__/
 *.pyc
 
-# Logs
-*.log
-
-# Virtual Environment
+# virtual environment
 venv/
-
-.github/workflows/ci.yml
-
-test_ghost.py
-test_items.py
-test_gameboard.py
-test_game_logic.py
